--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "dayjs": "^1.11.11",
     "lucide-react": "^0.401.0",
     "nanostores": "^0.10.3",
     "react": "^18.3.1",
